tests/paczka2/big_fuzzy/40382378.err
Error in line 2: 1VsGdBKTOO A145 62,95
Error in line 1: HnPROwbYMHT A871 7,7
Error in line 4: 6U6Og A145 68,0
Error in line 3: HnPROwbYMHT A145 85,7
Error in line 32: 1VsGdBKTOO S541 3,1
Error in line 29: HnPROwbYMHT A871 69,2
Error in line 46: 2oq S541 93,7
Error in line 49: Vcn A871 49,1
Error in line 47: 2oq A145 5,2
Error in line 59: A138 S541 19,3
Error in line 74: 1VsGdBKTOO S541 47,2
Error in line 77: 6U6Og A871 12,9
Error in line 85: 1VsGdBKTOO A871 11,1
Error in line 78: 2oq A871 40,0
Error in line 89: HnPROwbYMHT S541 14,3
Error in line 97: HnPROwbYMHT A871 27,9
Error in line 98: HnPROwbYMHT A145 94,8
Error in line 106: HnPROwbYMHT A14m 76,m
Error in line 124: 1VsGdBKTOO A145 77,c
Error in line 127: 1VsGdBKTOO A145 233,6
Error in line 142: HnPROwbYMHT A871 1,80
Error in line 114: HnPROwbYMHT A145 211,9
Error in line 143: 2oq A871 83,7
Error in line 133: A138 A145 20,3
Error in line 169: Vcn A145 71,6
Error in line 171: Vcn A138 40,5
Error in line 174: A138 S541 25,0
Error in line 180: A138 A145 60,3
Error in line 181: A138 A871 81,6
Error in line 183: A138 A138 17,9
Error in line 159: 2oq A138 94,3
Error in line 176: Vcn S541 89,9
Error in line 170: HnPROwbYMHT A871 256,9
Error in line 201: Vcn S541 62,5
Error in line 206: HnPROwbYMHT S541 66,5
Error in line 179: 6U6Og A871 20,5
Error in line 220: 6U6Og A145 23,9
Error in line 222: 6U6Og A871 94,3
Error in line 229: 6U6Og A145 11,5
Error in line 242: IBiijB3jkS9 S541 90,1
